5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1764_672.log
== TEST (2019-05-21 17:45:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:45:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:46:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int, n)
print(v)

-- ERROR:
File "XXXX", line 4
    v=ones(1, dtype=int, n)
                        ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:46:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(n, 1, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:46:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int, n)
print(v)

-- EXECUTION TIME:
0.153006
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 4
    v=ones(1, dtype=int, n)
                        ^
SyntaxError: non-keyword arg after keyword arg

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:46:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int, n)
print(v)

-- ERROR:
File "XXXX", line 4
    v=ones(1, dtype=int, n)
                        ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:47:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int)*6
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:47:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int)*6
print(v)

-- EXECUTION TIME:
0.544397
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[6]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[6]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:47:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int*6)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:47:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:58:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(1, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:59:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(n
		 , dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:00:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("Um numero inteiro: ")
v=ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
